cmake_minimum_required (VERSION 3.8)

project (CMAKE)

add_executable (CMAKE "Comparator.cpp" "Comparator.hpp" "Console.cpp" "Console.hpp" "Definitions.hpp" "File.hpp" "File.cpp" "Grades.hpp" "Grades.cpp" "Math.hpp" "Math.cpp" "main.cpp" "RND.cpp" "RND.hpp" "String.cpp" "String.hpp" "Student.cpp" "Student.hpp" "Students.cpp" "Students.hpp" "Timer.cpp" "Timer.hpp" "Utils.cpp" "Utils.hpp" "Table.hpp")