cmake_minimum_required (VERSION 3.8)

project (Objektinis_programavimas_1.5)

add_executable (Objektinis_programavimas_1.5 "Person.hpp" "Comparator.cpp" "Comparator.hpp" "Console.cpp" "Console.hpp" "Definitions.hpp" "File.hpp" "File.cpp" "Grades.hpp" "Grades.cpp" "Math.hpp" "Math.cpp" "main.cpp" "RND.cpp" "RND.hpp" "String.cpp" "String.hpp" "Student.cpp" "Student.hpp" "Students.cpp" "Students.hpp" "Timer.cpp" "Timer.hpp" "Utils.cpp" "Utils.hpp" "Table.hpp")

